test/multifile/protocol-conformance-broken.code
// RUN: %target-language-frontend -typecheck -whole-module-optimization -verify %s %S/Inputs/protocol-conformance/broken.code

// rdar://problem/29689007
protocol P {
  associatedtype AT // expected-note{{protocol requires nested type 'AT'}}
  fn f() -> AT
}

struct X { }

fn g() {
  immutable _: X.AT? = nil // expected-error{{reference to invalid associated type 'AT' of type 'X'}}
}

